<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/notesDialogMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/cardBlue"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="start">

        <TextView
            android:id="@+id/notesDialogDate"
            style="@style/TextAppearance.Material3.TitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:gravity="center"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="2dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/notesDialogTitle"
            style="@style/TextAppearance.Material3.TitleLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/title"
            android:visibility="visible"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/notesDialogTitleEdt"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/titleCaps"
            android:textColor="@color/black"
            android:layout_marginStart="5dp"
            android:background="@drawable/edittext_light"
            android:layout_weight="1"
            android:visibility="gone"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/notesDialogEdit"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/edit_icon" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:id="@+id/notesDialogMessage"
                style="@style/TextAppearance.Material3.BodyLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/message"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:visibility="visible"/>

            <EditText
                android:id="@+id/notesDialogMessageEdt"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/notesCaps"
                android:visibility="gone"
                android:textColor="@color/black"
                android:background="@drawable/edittext_light"
                android:textStyle="bold"
                android:textSize="18sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/bottomCardColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/notesDialogBlueColor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardBlue"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/notesDialogBlueColorImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notesDialogGreenColor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardGreen"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/notesDialogGreenColorImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notesDialogYellowColor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardYellow"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/notesDialogYellowColorImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notesDialogRedColor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardRed"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/notesDialogRedColorImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/notesDialogPurpleColor"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                app:cardBackgroundColor="@color/cardPurple"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/notesDialogPurpleColorImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:padding="3dp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/notesDialogBtnCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:visibility="gone">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/notesDialogSaveBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/save"
            android:background="@color/white"
            app:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </com.google.android.material.card.MaterialCardView>

</LinearLayout>